k8s-dashboard/ingress.yaml
 apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: k8s-dashboard
 namespace: kubernetes-dashborad
 labels:
  app.kubernetes.io/instance: kubecost
 annotations:
  alb.ingress.kubernetes.io/actions.ssl-redirect: |
   {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
  alb.ingress.kubernetes.io/backend-protocol: HTTP
  alb.ingress.kubernetes.io/certificate-arn: 
  alb.ingress.kubernetes.io/group.name: kubernetes-dashboard
  alb.ingress.kubernetes.io/healthcheck-path: /
  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
  alb.ingress.kubernetes.io/scheme: internal
  alb.ingress.kubernetes.io/ssl-redirect: "443"
  alb.ingress.kubernetes.io/subnets: subnet-, subnet-
  alb.ingress.kubernetes.io/target-type: ip
spec:
 ingressClassName: alb
 rules:
  - host: kubernetes.in
   http:
    paths:
     - path: /
      pathType: Prefix
      backend:
       service:
        name: kube-proxy
        port:
         number: 443
